...
                    Picker("Display style", selection: $displayStyle) {
                        ForEach(DisplayStyle.allCases, id: \.self) {
                            Text($0.name)
                        }
                    }
                    .pickerStyle(.menu)
                    .accessibilityIdentifier("displayStylePicker")
                }

                Section {
                    Picker("Transit system", selection: $selector) {
                        ForEach(TransitSystem.allCases, id: \.self) {
                            Text($0.displayName)
                        }
                    }
                    .pickerStyle(.menu)
                    .accessibilityIdentifier("transitSystemPicker")
                }

                switch selector {
                case .tfl:
                    TflSettingsView()
                case .tflBus:
...
                    NotificationCenter.default.post(name: .settingsSaved, object: nil)
                    NSApp.keyWindow?.close()
                }
                .keyboardShortcut(.defaultAction)
                .disabled(!(coordinator.hasValidConfig || displayStyleChanged))
                .buttonStyle(.borderedProminent)
                .accessibilityIdentifier("saveButton")
            }
            .padding()
        }
        .frame(width: 440, height: 360)
        .environmentObject(coordinator)
        .onAppear {
...
